syntax = "proto3";

package product;

service Product {
  rpc GetProduct(GetProductRequest) returns (GetProductResponse) {};
  rpc GetProductBatch(GetProductBatchRequest) returns (GetProductBatchResponse) {};
}

message GetProductRequest {
  string id = 1;
}

message GetProductResponse {
  string id = 1;
}

message GetProductBatchRequest {
  repeated string id = 1;
}

message GetProductBatchResponse {
  repeated ProductDTO product = 1;
}

message ProductDTO {
  string id = 1;
  float price = 2;
  float fixedDiscount = 3;
  float percentageDiscount = 4;
}
